--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -185,7 +185,7 @@
           </div>
           <div class="item-content large-divide">
             <div id="walnut_price" class="item-label big-font fixed-width bold">$3.49</div>
-            <button class="button-long expand big-font bold" type="button" onclick="showPopup('walnut')"Add to Cart</button>
+            <button class="button-long expand big-font bold" type="button" onclick="showPopup('walnut')">Add to Cart</button>
           </div>
       </div>
 
