--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <li><a href="solution-hw2">Homework Assignment 2</a></li>
       <li><a href="pui-hw3">Homework Assignment 3</a></li>
       <li><a href="pui-hw4">Homework Assignment 4</a></li>
+      <li><a href="pui-hw5">Homework Assignment 5</a></li>
     </ul>
 
   </body>
