--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="pui-hw3">Homework Assignment 3</a></li>
       <li><a href="pui-hw4">Homework Assignment 4</a></li>
       <li><a href="pui-hw5">Homework Assignment 5</a></li>
+      <li><a href="pui-hw6">Homework Assignment 6</a></li>
     </ul>
 
   </body>
