--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="pui-hw4">Homework Assignment 4</a></li>
       <li><a href="pui-hw5">Homework Assignment 5</a></li>
       <li><a href="pui-hw6">Homework Assignment 6</a></li>
+      <li><a href="portfolio">Final Project - Portfolio</a></li>
     </ul>
 
   </body>
