--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -69,7 +69,7 @@
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
                             <a href="projects/jamjelly.html">
-                                <img class="cap" alt="jump" src="assets/spotify.PNG" />
+                                <img class="cap" alt="spotify-img" src="assets/spotify.png" />
                                 <div class = "overlay blur" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
@@ -80,7 +80,7 @@
                         </div>
                         <div class="proj" id = "proj2" >
                             <a href="projects/pamelas.html">
-                                <img class="cap" alt="jump" src="assets/pamelas.PNG" />
+                                <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
@@ -91,7 +91,7 @@
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="jump" src="assets/gauge.PNG"  />
+                                <img class="cap" alt="jump" src="assets/gauge.png"  />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
