--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,7 +76,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Jam and Jelly Spotify Playlist Maker</div>
+                            <div class="small-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
                         </div>
                         <div class="proj" id = "proj2" >
                             <a href="projects/pamelas.html">
@@ -105,26 +105,36 @@
 
                 <div class="services">
                     <div class="services-list">
-                        <div class="proj" id = "proj4"> 
+                        <div class="proj" id = "proj1"> 
                             <a href="projects/jamjelly.html">
-                                <img class="cap" alt="jump" src="assets/spotify.PNG" />
+                                <img class="cap" alt="spotify-img" src="assets/spotify.png" />
+                                <div class = "overlay blur" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                            </a>
+                            <div class="small-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
+                        </div>
+                        <div class="proj" id = "proj2" >
+                            <a href="projects/pamelas.html">
+                                <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Jam and Jelly Spotify Playlist Maker</div>
-                        </div>
-                        <div class="proj" id = "proj5" >
-                            <a href="projects/pamelas.html">
-                                <img class="cap" alt="jump" src="assets/pamelas.PNG" />
-                            </a>
                             <div class="small-text">Pamela's Diner Redesigned Website</div>
                         </div>
-                        <div class="proj" id = "proj6" >
+                        <div class="proj" id = "proj3" >
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="jump" src="assets/gauge.PNG"  />
+                                <img class="cap" alt="jump" src="assets/gauge.png"  />
+                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
                             <div class="small-text">Gauge Me</div>
                         </div>
