added prev/back buttons

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@
             <nav>
                 <ul id="primary-navigation" class="primary-navigation flex">
                     <li>
-                        <a href="./assets/huarui-lai-resume.pdf" target="_blank" class="space">
+                        <a href="./assets/resume.pdf" target="_blank" class="space">
                             Resume
                         </a>
                     </li>
@@ -83,7 +83,7 @@
                             <div class="small-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
                         </div>
                         <div class="proj" id = "proj2" >
-                            <a href="projects/pamelas.html">
+                            <a href="projects/pamela.html">
                                 <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
@@ -91,7 +91,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Pamela's Diner Redesigned Website</div>
+                            <div class="small-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/gaugeme.html">
@@ -102,7 +102,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Gauge Me</div>
+                            <div class="small-text no-blur">Gauge Me</div>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="proj" id = "proj4"> 
                             <a href="projects/jamjelly.html">
                                 <img class="cap" alt="spotify-img" src="assets/spotify.png" />
-                                <div class = "overlay blur" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
@@ -129,7 +129,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Pamela's Diner Redesigned Website</div>
+                            <div class="small-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
                         <div class="proj" id = "proj6" >
                             <a href="projects/gaugeme.html">
@@ -140,73 +140,39 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text">Gauge Me</div>
+                            <div class="small-text no-blur">Gauge Me</div>
                         </div>
                     </div>
                 </div>
 
-                <!-- <div class="services">
-                    <div class="container">
-                        <div class="services-list">
-                            <div class="proj" id = "proj4" onmouseover="JamShow(this)" onmouseout="JamHide(this)">
-                                <img class="cap proj-thumbnail" alt="jump" src="assets/spotify.png"/>
-                                <p class = "jamjelly proj-thumbnail" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                                <p>Jam and Jelly Spotify Playlist Maker</p>
-                            </div>
-                            <div class="proj" id = "proj5">
-                                <img class="cap proj-thumbnail" alt="jump" src="assets/pamelas.PNG"  />
-                                <p class = "jamjelly proj-thumbnail" id="jamjelly1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                                <p>Pamela's Diner Redesigned Website</p>
-                            </div>
-                            <div class="proj" id = "proj6">
-                                <img class="cap proj-thumbnail" alt="jump" src="assets/gauge.png"  />
-                                <p class = "jamjelly proj-thumbnail" id="jamjelly2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                                <p>Gauge Me</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
                 <div class="footer">
                     <div class="container">
                         <div class="services-list">
-                            <div class="contact" href = "mailto: huarui.lai@gmail.com">
-                                <img class="icon" alt="jump" src="assets/plane.png" />
+                            <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                                <img class="icon" alt="mail-icon" src="assets/plane.png" />
                                 <div class="small-text">
                                     <p>huarui.lai@gmail.com</p>
                                 </div>
-                            </div>
-                            <div class="contact" href = "https://github.com/hlai1">
-                                <img class="icon" alt="jump" src="assets/github.png" />
+                            </a>
+                            <a class="contact" href = "https://github.com/hlai1" target="_blank">
+                                <img class="icon" alt="github-icon" src="assets/github.png" />
                                 <div class="small-text">
                                     <p>hlai1</p>
                                 </div>
-                            </div>
-                            <div class="contact" href = "www.linkedin.com/in/huarui-lai">
-                                <img class="icon" alt="jump" src="assets/linkedin.png" />
+                            </a>
+                            <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
+                                <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
                                 <div class="small-text">
                                     <p>Huarui Lai</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="contact center">
-                            <img class="icon" alt="jump" src="assets/star.png" />
+                            <img class="icon" alt="star-icon" src="assets/star.png" />
                             <div class="small-text">   
                                 <p>made by Huarui Lai</p>
                             </div>
-                            <img class="icon" alt="jump" src="assets/star.png" />
+                            <img class="icon" alt="star-icon" src="assets/star.png" />
                         </div>
                     </div>
 
