--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul id="primary-navigation" class="primary-navigation flex">
                     <li>
-                        <a href="../assets/huarui-lai-resume.pdf" target="_blank" class="space">
+                        <a href="../assets/resume.pdf" target="_blank" class="space">
                             Resume
                         </a>
                     </li>
@@ -37,5 +37,57 @@
         <section>
            
         </section>
+
+        <div class="footer">
+            <div class="container">
+                <div class="contact center">
+                    <a href = "gaugeme.html">
+                        
+                        <div class="small-text button">
+                            <img class="left" alt="left-arrow" src="../assets/left.png" />
+                            <p>prev</p>
+                        </div>   
+                    </a>
+                    <a class="small-text" href = "pamela.html">   
+                        <div class="button">
+                            <p>next</p>
+                        </div>   
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="container">
+                <div class="services-list">
+                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <div class="small-text">
+                            <p>huarui.lai@gmail.com</p>
+                        </div>
+                    </a>
+                    <a class="contact" href = "https://github.com/hlai1" target="_blank">
+                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <div class="small-text">
+                            <p>hlai1</p>
+                        </div>
+                    </a>
+                    <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
+                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <div class="small-text">
+                            <p>Huarui Lai</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="contact center">
+                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <div class="small-text">   
+                        <p>made by Huarui Lai</p>
+                    </div>
+                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
