updating mobile view

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,7 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="icon" type="image/png" href="assets/H..png" />
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="stylesheet" href="css/style.css">
@@ -80,7 +81,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
+                            <div class="title-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
                         </div>
                         <div class="proj" id = "proj2" >
                             <a href="projects/pamela.html">
@@ -91,7 +92,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text no-blur">Pamela's Diner Redesigned Website</div>
+                            <div class="title-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/gaugeme.html">
@@ -102,7 +103,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text no-blur">Gauge Me</div>
+                            <div class="title-text no-blur">Gauge Me</div>
                         </div>
                     </div>
                 </div>
@@ -147,30 +148,30 @@
 
                 <div class="footer">
                     <div class="container">
-                        <div class="services-list">
+                        <div class="services-list-1">
                             <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
                                 <img class="icon" alt="mail-icon" src="assets/plane.png" />
                                 <div class="small-text">
-                                    <p>huarui.lai@gmail.com</p>
+                                    <div class="username">huarui.lai@gmail.com</div>
                                 </div>
                             </a>
                             <a class="contact" href = "https://github.com/hlai1" target="_blank">
                                 <img class="icon" alt="github-icon" src="assets/github.png" />
                                 <div class="small-text">
-                                    <p>hlai1</p>
+                                    <div class="username">hlai1</div>
                                 </div>
                             </a>
                             <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
                                 <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
                                 <div class="small-text">
-                                    <p>Huarui Lai</p>
+                                    <div class="username">Huarui Lai</div>
                                 </div>
                             </a>
                         </div>
                         <div class="contact center">
                             <img class="icon" alt="star-icon" src="assets/star.png" />
                             <div class="small-text">   
-                                <p>made by Huarui Lai</p>
+                                <div class="username-1">made by Huarui Lai</div>
                             </div>
                             <img class="icon" alt="star-icon" src="assets/star.png" />
                         </div>
