--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
+        <link rel="icon" type="image/png" href="../assets/huarui-logo.PNG" />
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     
@@ -45,12 +45,13 @@
                         
                         <div class="small-text button">
                             <img class="left" alt="left-arrow" src="../assets/left.png" />
-                            <p>prev</p>
+                            <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "pamela.html">   
                         <div class="button">
-                            <p>next</p>
+                            <div>next</div>
+                            <img class="left" alt="right-arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -59,30 +60,30 @@
 
         <div class="footer">
             <div class="container">
-                <div class="services-list">
+                <div class="services-list-1">
                     <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
-                            <p>huarui.lai@gmail.com</p>
+                            <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
                         <img class="icon" alt="github-icon" src="../assets/github.png" />
                         <div class="small-text">
-                            <p>hlai1</p>
+                            <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
                         <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
                         <div class="small-text">
-                            <p>Huarui Lai</p>
+                            <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
                     <img class="icon" alt="star-icon" src="../assets/star.png" />
                     <div class="small-text">   
-                        <p>made by Huarui Lai</p>
+                        <div class="username-1">made by Huarui Lai</div>
                     </div>
                     <img class="icon" alt="star-icon" src="../assets/star.png" />
                 </div>
