updated project icons + developing project pages

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,18 +33,20 @@
                 </a>
             </h1>
             <nav>
-                <ul id="primary-navigation" class="primary-navigation flex">
-                    <li>
-                        <a href="./assets/resume.pdf" target="_blank" class="space">
-                            Resume
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./about/about.html" class="space">
-                            About
-                        </a>
-                    </li>
-                </ul>
+                <div class="inner-flex">
+                    <ul id="primary-navigation" class="primary-navigation flex inner-flex">
+                        <li>
+                            <a href="./assets/resume.pdf" target="_blank" class="space">
+                                Resume
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./about/about.html" class="space">
+                                About
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
 
@@ -73,6 +75,17 @@
                 <div class="services">
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
+                            <a href="projects/google.html">
+                                <img class="cap" alt="spotify-img" src="assets/google.png" />
+                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                            </a>
+                            <div class="small-text no-blur">Google: STEP Internship</div>
+                        </div>
+                        <div class="proj" id = "proj2"> 
                             <a href="projects/jamjelly.html">
                                 <img class="cap" alt="spotify-img" src="assets/spotify.png" />
                                 <div class = "overlay blur" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -83,7 +96,7 @@
                             </a>
                             <div class="title-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
                         </div>
-                        <div class="proj" id = "proj2" >
+                        <div class="proj" id = "proj3" >
                             <a href="projects/pamela.html">
                                 <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -94,7 +107,12 @@
                             </a>
                             <div class="title-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
-                        <div class="proj" id = "proj3" >
+                    </div>
+                </div>
+
+                <div class="services">
+                    <div class="services-list">
+                        <div class="proj" id = "proj4" >
                             <a href="projects/gaugeme.html">
                                 <img class="cap" alt="jump" src="assets/gauge.png"  />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -105,25 +123,9 @@
                             </a>
                             <div class="title-text no-blur">Gauge Me</div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="services">
-                    <div class="services-list">
-                        <div class="proj" id = "proj4"> 
-                            <a href="projects/jamjelly.html">
-                                <img class="cap" alt="spotify-img" src="assets/spotify.png" />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
-                            </a>
-                            <div class="small-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
-                        </div>
                         <div class="proj" id = "proj5" >
-                            <a href="projects/pamelas.html">
-                                <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
+                            <a href="projects/infosystems.html">
+                                <img class="cap" alt="pamelas-img" src="assets/is.png" />
                                 <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
