--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -54,14 +54,30 @@
          </section>
 
          <div class="body-text"> 
+            <div class="intros">
+                <div class="subheading">Posters</div>
+            </div>
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
-                <img class="imgs" alt="yosemite" src="../assets/yosemite.jpg" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" /> 
+                <img class="imgs" alt="japanese-garden" src="../assets/electives.png" />
+                <img class="imgs" alt="yosemite" src="../assets/transfer.png" /> 
             </div>
         </div>
 
+        <div class="body-text"> 
+            <div class="intros">
+                <div class="subheading">Business Cards</div>
+            </div>
+            <div class="img-sections">
+                <img class="imgs" alt="point-lobos" src="../assets/business-1.png" /> 
+                <img class="imgs" alt="point-lobos" src="../assets/business-2.png" /> 
+            </div>
+            <div class="img-sections">
+                <img class="imgs" alt="point-lobos" src="../assets/business-3.png" /> 
+                <img class="imgs" alt="point-lobos" src="../assets/business-4.png" /> 
+            </div>
+        </div>
 
+        
         <div class="footer">
             <div class="container">
                 <div class="contact center">
