--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="space">
+                        <a href="../about/about.html" class="space">
                             About
                         </a>
                     </li>
@@ -47,7 +47,7 @@
                     </div>
                     <div class="desc">
                         <img class="icon" alt="group-icon" src="../assets/group.png" />
-                        <div class="date">Front-end developer</div>
+                        <div class="date">STEP Intern</div>
                     </div>
                 </div>
            </div>
@@ -55,9 +55,9 @@
 
         <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
-                <img class="imgs" alt="yosemite" src="../assets/yosemite.jpg" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" /> 
+                <img class="imgs small-img" alt="japanese-garden" src="../assets/google-oregon.jpg" />
+                <img class="imgs small-img" alt="yosemite" src="../assets/yosemite.jpg" />
+                <img class="imgs small-img" alt="point-lobos" src="../assets/yt.jpg" /> 
             </div>
         </div>
 
@@ -105,6 +105,15 @@
                     </li>
                 </ol>
             </div>
+
+            <div class="body-text"> 
+                <div class="img-sections">
+                    <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
+                    <img class="imgs" alt="yosemite" src="../assets/volleyball.jpg" />
+                    <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" />  
+                </div>
+            </div>
+
             <div class="intros">
                 <div class="subheading">Final Overview</div>
             </div>
