--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="space">
+                        <a href="../about/about.html" class="space">
                             About
                         </a>
                     </li>
