--- a/portfolio/about/about.html
+++ b/portfolio/about/about.html
@@ -60,7 +60,7 @@
             <div class="collage-left">
                 <div class="abt-img-sections">
                     <img class="abt-imgs" alt="internet-1" src="pfp1.jpg" />
-                    <img class="abt-imgs" alt="internet-2" src="sf.jpg" />
+                    <img class="abt-imgs" alt="internet-2" src="yosemite-selfie.jpg" />
                     <img class="abt-imgs" alt="internet-2" src="ny-art.jpg" />
                 </div>
             </div>
