--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,8 +58,7 @@
                      Welcome to my design portfolio.</div>
                 </div>
                 <div class="flex-item-right">
-                    <image class="cap" src="assets/airplane.GIF" />
-                    <!-- <img class="cap" alt="jump" src="assets/cap.jpg" /> -->
+                    <image class="cap" src="assets/croc-goose.GIF" />
                 </div>
             </div>
         </section>
